# lfortran

./: .gitignore  CMakeLists.txt  build0.sh  build0_win.xsh  build1.sh  generate_lsp_code.py
src/: CMakeLists.txt
src/lfortran/: CMakeLists.txt
src/libasr/: stacktrace.cpp
src/libasr/runtime/: lfortran_intrinsics.c
src/lsp/: CMakeLists.txt  base_lsp_language_server.cpp  base_lsp_language_server.h  communication_protocol.cpp  communication_protocol.h  generate_lsp_code.py  language_server.cpp  language_server.h  lexer.cpp  lexer.h  lfortran_language_server.cpp  lfortran_language_server.h  lfortran_lsp_language_server.cpp  lfortran_lsp_language_server.h  logger.cpp  logger.h  lsp_exception.cpp  lsp_exception.h  lsp_json_parser.cpp  lsp_json_parser.h  lsp_json_serializer.cpp  lsp_json_serializer.h  lsp_language_server.cpp  lsp_language_server.h  lsp_message_stream.cpp  lsp_message_stream.h  lsp_request_parser.cpp  lsp_request_parser.h  lsp_serializer.cpp  lsp_serializer.h  lsp_transformer.cpp  lsp_transformer.h  main.cpp  message_queue.cpp  message_queue.h  message_stream.h  parser.cpp  parser.h  parser_declarations.h  request_parser.cpp  (+11 more)
src/server/: README.md  process_usage.cpp
